fixed a bug where the related work hit area was overlapping the footer links

--- a/src/sass/site/posts/_work-single.scss
+++ b/src/sass/site/posts/_work-single.scss
@@ -202,6 +202,7 @@
 		}
 
 		&__item {
+			overflow: hidden;
 			margin-bottom: 2em;
 
 			@include breakpoint( bp() ) {
